--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,7 +15,7 @@
 
   <script>
     const interval = 2000; // 2 seconds
-    const apiUrl = "http://localhost:8000/quote";
+    const apiUrl = "http://138.199.213.241:8000/quote";
 
     function fetchQuotes() {
       fetch(apiUrl)
