--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,39 +1,48 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <title>Live Stock Quotes</title>
-  <style>
-    body { font-family: sans-serif; padding: 1rem; }
-    h2 { margin-bottom: 1rem; }
-    .quote { margin: 0.3rem 0; font-size: 1rem; }
-  </style>
-</head>
-<body>
-  <h2>Live Stock LTPs</h2>
-  <div id="quotes"></div>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Live Stock Quotes</title>
+    <style>
+      body {
+        font-family: sans-serif;
+        padding: 1rem;
+      }
+      h2 {
+        margin-bottom: 1rem;
+      }
+      .quote {
+        margin: 0.3rem 0;
+        font-size: 1rem;
+      }
+    </style>
+  </head>
+  <body>
+    <h2>Live Stock LTPs</h2>
+    <div id="quotes"></div>
 
-  <script>
-    const interval = 2000; // 2 seconds
-    const apiUrl = "http://138.199.213.241:8000/quote";
+    <script>
+      const interval = 2000;
+      const apiUrl = "http://138.199.213.241:8000/quote";
 
-    function fetchQuotes() {
-      fetch(apiUrl)
-        .then(res => res.json())
-        .then(data => {
-          const box = document.getElementById("quotes");
-          box.innerHTML = "";
-          for (const [symbol, info] of Object.entries(data)) {
-            const line = document.createElement("div");
-            line.className = "quote";
-            line.textContent = `${symbol}: ₹${info.ltp}`;
-            box.appendChild(line);
-          }
-        });
-    }
+      function fetchQuotes() {
+        fetch(apiUrl)
+          .then((res) => res.json())
+          .then((data) => {
+            const box = document.getElementById("quotes");
+            box.innerHTML = "";
+            for (const [symbol, info] of Object.entries(data)) {
+              const row = document.createElement("div");
+              row.className = "quote";
+              row.textContent = `${symbol}: ₹${info.last_price}`;
+              box.appendChild(row);
+            }
+          })
+          .catch((err) => console.error("Fetch error:", err));
+      }
 
-    setInterval(fetchQuotes, interval);
-    fetchQuotes();
-  </script>
-</body>
+      setInterval(fetchQuotes, interval);
+      fetchQuotes();
+    </script>
+  </body>
 </html>
