--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,48 +1,82 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Live Stock Quotes</title>
-    <style>
-      body {
-        font-family: sans-serif;
-        padding: 1rem;
-      }
-      h2 {
-        margin-bottom: 1rem;
-      }
-      .quote {
-        margin: 0.3rem 0;
-        font-size: 1rem;
-      }
-    </style>
-  </head>
-  <body>
-    <h2>Live Stock LTPs</h2>
-    <div id="quotes"></div>
+<head>
+  <meta charset="UTF-8">
+  <title>Live Stock Quotes</title>
+  <style>
+    body { font-family: sans-serif; padding: 1rem; }
+    h2 { margin-bottom: 1rem; }
+    table { border-collapse: collapse; width: 100%; font-size: 14px; }
+    th, td { border: 1px solid #ccc; padding: 0.5rem; text-align: left; }
+    th { background: #f0f0f0; }
+  </style>
+</head>
+<body>
+  <h2>Live Stock LTPs</h2>
+  <table>
+    <thead>
+      <tr>
+        <th>Symbol</th>
+        <th>Token</th>
+        <th>LTP</th>
+        <th>Last Qty</th>
+        <th>Avg Price</th>
+        <th>Volume</th>
+        <th>Buy Qty</th>
+        <th>Sell Qty</th>
+        <th>Open</th>
+        <th>High</th>
+        <th>Low</th>
+        <th>Close</th>
+        <th>Trade Time</th>
+        <th>OI</th>
+        <th>OI High</th>
+        <th>OI Low</th>
+        <th>Exchange Time</th>
+      </tr>
+    </thead>
+    <tbody id="quotes"></tbody>
+  </table>
 
-    <script>
-      const interval = 1000;
-      const apiUrl = "http://138.199.213.241:8000/quote";
+  <script>
+    const interval = 2000;
+    const apiUrl = "http://138.199.213.241:8000/quote";
 
-      function fetchQuotes() {
-        fetch(apiUrl)
-          .then((res) => res.json())
-          .then((data) => {
-            const box = document.getElementById("quotes");
-            box.innerHTML = "";
-            for (const [symbol, info] of Object.entries(data)) {
-              const row = document.createElement("div");
-              row.className = "quote";
-              row.textContent = `${symbol}: ₹${info.last_price}`;
-              box.appendChild(row);
-            }
-          })
-          .catch((err) => console.error("Fetch error:", err));
-      }
+    function fetchQuotes() {
+      fetch(apiUrl)
+        .then(res => res.json())
+        .then(data => {
+          const tbody = document.getElementById("quotes");
+          tbody.innerHTML = "";
+          for (const [symbol, info] of Object.entries(data)) {
+            const row = document.createElement("tr");
+            row.innerHTML = `
+              <td>${symbol}</td>
+              <td>${info.instrument_token || "-"}</td>
+              <td>${info.ltp || info.last_price || "-"}</td>
+              <td>${info.last_qty || "-"}</td>
+              <td>${info.avg_price || "-"}</td>
+              <td>${info.volume || "-"}</td>
+              <td>${info.buy_qty || "-"}</td>
+              <td>${info.sell_qty || "-"}</td>
+              <td>${info.open || "-"}</td>
+              <td>${info.high || "-"}</td>
+              <td>${info.low || "-"}</td>
+              <td>${info.close || "-"}</td>
+              <td>${info.last_trade_time || "-"}</td>
+              <td>${info.oi || "-"}</td>
+              <td>${info.oi_day_high || "-"}</td>
+              <td>${info.oi_day_low || "-"}</td>
+              <td>${info.exchange_time || "-"}</td>
+            `;
+            tbody.appendChild(row);
+          }
+        })
+        .catch(err => console.error("Fetch error:", err));
+    }
 
-      setInterval(fetchQuotes, interval);
-      fetchQuotes();
-    </script>
-  </body>
+    setInterval(fetchQuotes, interval);
+    fetchQuotes();
+  </script>
+</body>
 </html>
